# mortgage-rag-chatbot

./: .gitignore
backend/: .env  main.py  prompt.py  pyproject.toml  rag.py  security.py
backend/chroma_db/: chroma.sqlite3
frontend/app/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/utils/: sharedState.ts
frontend/components/: callToActionSection.tsx  featureSection.tsx  howItWorks.tsx  statsSection.tsx
