[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.105.2",
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "google-genai>=2.10.0",
    "google-generativeai>=0.8.6",
    "langchain",
    "langchain-chroma",
    "langchain-community",
    "langchain-huggingface",
    "langchain-text-splitters",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "sentence-transformers>=5.5.1",
    "uvicorn>=0.48.0",
]
